Add submit skill

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
@@ -21,6 +21,7 @@
                 </div>
                 <div class="col-lg-2">
                     <app-search-skill-input (searchSkillEvent)="skillMessage($event)"></app-search-skill-input>
+                    <a href="https://prokarma001.sharepoint.com/Pages/SkillRequestForm.aspx" class="submit-skills" target="_blank" rel="noopener">Submit Skills</a>
                 </div>
                 <div class="col-lg-2">
                     <app-search-name-input (searchNameEvent)="nameMessage($event)"></app-search-name-input>
