--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-skill-input/search-skill-input.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/search-form/search-skill-input/search-skill-input.component.html
@@ -10,6 +10,8 @@
             </mat-option>
         </mat-autocomplete>
     </mat-form-field>
+    <a href="https://prokarma001.sharepoint.com/Pages/SkillRequestForm.aspx" class="submit-skills"
+                        target="_blank" rel="noopener">Can't find a skill?</a>
 </form>
 
 <!-- (optionSelected)="log($event.option.value); searchSkillInput.value=''" -->
