--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-results/employee-search-results.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-results/employee-search-results.component.scss
@@ -28,7 +28,7 @@ $color-white: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 67px;
+  padding-top: 10px;
 }
 
 .sort-by-text {
