--- a/PKonnect/PKonnect.UI/ClientApp/src/app/app.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/app.component.html
@@ -1,2 +1,9 @@
-<app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
+<div class="page-container">
+    <div class="content-wrap">
+        <app-nav-bar></app-nav-bar>
+        <router-outlet></router-outlet>
+    </div>
+    <div class="footer">
+        <app-footer></app-footer>
+    </div>
+</div>
