--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-results/employee-search-results.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-results/employee-search-results.component.html
@@ -24,6 +24,9 @@
             <app-employee-search-card [employeeData]="employee"></app-employee-search-card>
         </div>
     </div>
+    <div class="cards-count">
+            <p class="showing-text">Showing 1 - {{employeeSearchResults.length}} of {{employeeSearchResultsCount}}</p>
+        </div>
     <div class="view-more-employees" *ngIf="employeeSearchResults.length < employeeSearchResultsCount">
             <button type="submit" class="btn btn-major" (click)="viewMore()">
                 <span *ngIf="!viewMoreLoading">View More</span>
