--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/footer/footer.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/footer/footer.component.scss
@@ -11,4 +11,9 @@
   color: #ffffff;
   text-align: center;
   padding: 15px 0px;
+
+  @media screen and (max-width: 420px) {
+    font-size: 10px;
+    line-height: 12px;
+  } 
 }
