Change employee url to new dev url

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-experience/employee-experience.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-experience/employee-experience.component.html
@@ -2,7 +2,7 @@
         <!-- {{employeeExperienceDetails | json}} -->
         <div class="employee-about" *ngIf="employeeExperienceDetails?.roleDescription">
                 <h1>About</h1>
-                <p >{{employeeExperienceDetails.roleDescription}}.</p>
+                <p >{{employeeExperienceDetails.roleDescription}}</p>
         </div>
         <div class="employee-projects">
                 <h1>Experience</h1>
