--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-profile/employee-profile.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-profile/employee-profile.component.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <app-employee-info class="employee-profile-cards" [employeeInfoDetails]="employeeDetails"></app-employee-info>
-                <app-employee-skills class="employee-profile-cards" [employeeSkillDetails]="employeeDetails.employeeSkills"></app-employee-skills>
+                <app-employee-skills class="employee-profile-cards" [employeeSkillDetails]="employeeDetails.resourceSkills"></app-employee-skills>
             </div>
             <div class="col-lg-9">
                 <app-employee-experience class="employee-profile-cards" [employeeExperienceDetails]="employeeDetails"></app-employee-experience>
