Add employee or contractor tag

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
@@ -41,7 +41,7 @@
                                 <fa-icon class="slider-icon" [icon]="faIdCard" size="md"></fa-icon>
                         </div>
                         <div class="col-10">
-                                <span class="employee-info-key">Employee ID: </span> E21000000
+                                <span class="employee-info-key">Employee ID: </span> {{employeeInfoDetails.employeeId}}
                         </div>
                 </div>
         </div>
