Fix employee tag css and reset certifications and layout

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.html
@@ -15,7 +15,42 @@
     <div *ngIf="!isMobile || toggleSearchForm" class="search-criteria">
         <form #searchEmployeeForm="ngForm" (keydown.enter)="$event.preventDefault()"
             (ngSubmit)="searchEmployees(1, 10, true);">
-            <div class="row">
+            <div class="row new-form">
+                <div class="col-lg-10">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <app-search-role-input (searchRoleEvent)="roleMessage($event)"></app-search-role-input>
+                        </div>
+                        <div class="col-lg-3">
+                            <app-search-skill-input (searchSkillEvent)="skillMessage($event)"></app-search-skill-input>
+                        </div>
+                        <div class="col-lg-3">
+                            <app-search-certification-input></app-search-certification-input>
+                        </div>
+                        <div class="col-lg-2">
+                            <app-search-name-input (searchNameEvent)="nameMessage($event)"></app-search-name-input>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <app-search-avail-input (searchAvailEvent)="availMessage($event)"></app-search-avail-input>
+                        </div>
+                        <div class="col-lg-3">
+                            <app-search-location-input (searchLocationEvent)="locationMessage($event)">
+                            </app-search-location-input>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 filter-form-buttons">
+                    <button type="submit" class="btn search-filter">
+                        <span *ngIf="!isFindingExperts">Filter Results</span>
+                        <span *ngIf="isFindingExperts">Finding <fa-icon class="slider-icon" [icon]="faSpinner"
+                                [spin]="true" size="md"></fa-icon></span>
+                    </button>
+                    <span class="reset-filters" (click)="emptySkills();">Reset Filters</span>
+                </div>
+            </div>
+            <!-- <div class="row">
                 <div class="col-lg-3">
                     <app-search-role-input (searchRoleEvent)="roleMessage($event)"></app-search-role-input>
                 </div>
@@ -26,8 +61,8 @@
                     <app-search-certification-input></app-search-certification-input>
                 </div>
                 <div class="col-lg-2">
-                        <app-search-name-input (searchNameEvent)="nameMessage($event)"></app-search-name-input>
-                    </div>
+                    <app-search-name-input (searchNameEvent)="nameMessage($event)"></app-search-name-input>
+                </div>
                 <div class="col-lg-2 filter-form-buttons">
                     <button type="submit" class="btn search-filter">
                         <span *ngIf="!isFindingExperts">Filter Results</span>
@@ -45,7 +80,7 @@
                     <app-search-location-input (searchLocationEvent)="locationMessage($event)">
                     </app-search-location-input>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="skills">
