--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
@@ -7,21 +7,7 @@ $color-white: #FFFFFF;
     margin: 50px 0px 0px 0px;
 }
 
-.col-lg-2{
-    padding-right: 0px;
-    @media screen and (max-width: $break-small) {
-        padding-right: 15px;
-    }
-}
-
-.col-lg-3{
-    padding-right: 0px;
-    @media screen and (max-width: $break-small) {
-        padding-right: 15px;
-    }
-}
-
-.col-lg-1{
+.col-lg-2, .col-lg-1, .col-lg-3, .col-lg-4 {
     padding-right: 0px;
     @media screen and (max-width: $break-small) {
         padding-right: 15px;
