--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
@@ -14,6 +14,13 @@ $color-white: #FFFFFF;
     }
 }
 
+@media screen and (max-width: $break-small) {
+    .filter-results-form {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+}
+
 h1 {
     font-style: normal;
     font-weight: bold;
